--- a/src/index.css
+++ b/src/index.css
@@ -5,3 +5,12 @@
 .navigation{
     @apply text-black font-Poppins font-bold text-base
 }
+
+.first-slide img {
+    height: 582px !important;
+    border: 1px solid #000;
+  }
+  
+  .splide__slide img {
+    height: 486px;
+  }
