feat-shop: implementing logic shop

--- a/src/index.css
+++ b/src/index.css
@@ -8,3 +8,10 @@
 .splide__arrow--prev {
   display: none;
 }
+
+select {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  text-indent: 1px;
+  text-overflow: '';
+}
