--- a/src/index.css
+++ b/src/index.css
@@ -15,3 +15,11 @@ select {
   text-indent: 1px;
   text-overflow: '';
 }
+
+.input{
+@apply outline-none border border-cor-9F9F9F rounded-lg py-2 font-Poppins font-normal text-base text-cor-9F9F9F p-2
+}
+
+.label{
+ @apply font-Poppins font-medium text-base text-black
+}
