--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 .navigation{
-    @apply text-black font-Poppins font-bold text-base
+    @apply text-black font-Poppins font-medium text-base
 }
 .splide__arrow--prev {
   display: none;
@@ -23,3 +23,9 @@ select {
 .label{
  @apply font-Poppins font-medium text-base text-black
 }
+
+.card {
+  @apply overflow-y-auto max-h-64 px-2 
+}
+
+
