--- a/src/index.css
+++ b/src/index.css
@@ -24,14 +24,14 @@ select {
  @apply font-Poppins font-medium text-base text-black
 }
 
-.card {
+.cart-scrool {
   @apply overflow-y-auto max-h-64 px-2 
 }
 
 ::-webkit-scrollbar {
   width: 10px;
 }
-.card::-webkit-scrollbar {
+.cart-scrool::-webkit-scrollbar {
   width: 6px;
 }
 
@@ -46,5 +46,23 @@ border-radius: 100vw;
   border-radius: 30px;
 
 }
+
+
+.card-father:hover .card-hover{
+@apply flex
+}
+
+.card-father .card-hover{
+@apply hidden
+}
+
+.card-father:hover .card-no-hover{
+  @apply hidden
+}
+
+.card-father .card-no-hover{
+  @apply flex
+}
+
 
 
